option java_package = "fr.kissy.hellion.proto.message";
option java_outer_classname = "Authenticated";
option java_generic_services = false;

import "Proto/Common/Object.proto";
import "Proto/Common/Property.proto";

message AuthenticatedProto {
    repeated ObjectProto players = 1;	
}
