option java_package = "fr.kissy.hellion.proto.message";
option java_outer_classname = "ObjectUpdated";
option java_generic_services = false;

import "Proto/Common/Object.proto";
import "Proto/Common/Property.proto";

message ObjectUpdatedProto {
    repeated ObjectProto objects = 1;	
}
